syntax="proto3";

package order_service;
option go_package="genproto/order_service";

import "google/protobuf/empty.proto";


message CreateMerchantReq {
    string name = 1;
    string payment_history = 2;
    string phone_number = 3;
}

message CreateMerchantResponse {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
    string created_at = 5;
    string updated_at = 6;
}

message MerchantId {
    string id = 1;
}

message GetSingleMerchantResponse {
    string id = 1;
    string name = 2;
    string review_id = 3;
    string payment_history = 4;
    string phone_number = 5;
    string created_at = 6;
    string updated_at = 7;
}

message GetListMerchantsReq {
    int32 limit = 1;
    int32 offset = 2;
}

message GetListMerchantsResponse {
    repeated GetSingleMerchantResponse getmerchants = 1;
    int32 count = 2;
}

message UpdateMerchantReq {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
}

message UpdateMerchantResponse {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
    string created_at = 5;
    string updated_at = 6;
}