syntax="proto3";

package order_service;
option go_package="genproto/order_service";

import "google/protobuf/empty.proto";


message CreateUserReq {
    string name = 1;
    string payment_history = 2;
    string phone_number = 3;
}

message CreateUserResponse {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
    string created_at = 5;
    string updated_at = 6;
}

message UserId {
    string id = 1;
}

message GetSingleUserResponse {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
    string created_at = 5;
    string updated_at = 6;
}

message GetListUsersReq {
    int32 limit = 1;
    int32 offset = 2;
}

message GetListUsersResponse {
    repeated GetSingleUserResponse getUsers = 1;
    int32 count = 2;
}

message UpdateUserReq {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
}

message UpdateUserResponse {
    string id = 1;
    string name = 2;
    string payment_history = 3;
    string phone_number = 4;
    string created_at = 5;
    string updated_at = 6;
}